--- a/film.html
+++ b/film.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Фильмы</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=320, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="css/block.css">
   <link rel="stylesheet" type="text/css" href="css/header.css">
   <link rel="stylesheet" type="text/css" href="css/scroll.css">
