--- a/film.html
+++ b/film.html
@@ -2,13 +2,15 @@
 <html>
 <head>
   <title>Фильмы</title>
-  <meta name="viewport" content="width=320, initial-scale=1">
+  <meta name="viewport" content="initial-scale=1, maximum-scale=1">
   <link rel="stylesheet" type="text/css" href="css/block.css">
   <link rel="stylesheet" type="text/css" href="css/header.css">
   <link rel="stylesheet" type="text/css" href="css/scroll.css">
   <link rel="stylesheet" type="text/css" href="css/search.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.css">
+
 </head>
+
 <body>
 
 
@@ -42,18 +44,47 @@
   <div class="border">
     <div class="wrap">
       <div class="product-wrap">
-        <a href=""><img src="img/slot.jpg"></a>
+        <a href=""><img src="img/anna.jpg"></a>
       </div>
       <div class="loop-action">
-        <a href="" class="add-to-cart">Перейти</a>
+        <a href="https://291122.lordfilm.black/8830-film-anna-2019.html" class="add-to-cart">Перейти</a>
 
       </div>
     </div>
     <div class="product-info">
       <div class="rating-mini">
+        <span class="active"></span>  
+        <span class="active"></span>    
+        <span class="active"></span>  
+        <span class="active"></span>    
+        <span class="active"></span>
         <span></span>  
         <span></span>    
         <span></span>  
+        <span></span>    
+        <span></span>
+      </div>
+      <h3 class="product-title">Анна</h3>
+      <div class="price">Типо русская девушка мега киллер, работает на две спец. службы, считается мега крутой.
+      </br></br></br></br></div>
+   </div>
+  </div>
+
+  <div class="border">
+    <div class="wrap">
+      <div class="product-wrap">
+        <a href=""><img src="img/antivirys.jpg"></a>
+      </div>
+      <div class="loop-action">
+        <a href="https://lp-22film.lordfilm6.zone/18115-antivirus-2012.html" class="add-to-cart">Перейти</a>
+
+      </div>
+    </div>
+    <div class="product-info">
+      <div class="rating-mini">
+        <span class="active"></span>  
+        <span class="active"></span>    
+        <span class="active"></span>  
         <span></span>    
         <span></span>
         <span></span>  
@@ -62,8 +93,37 @@
         <span></span>    
         <span></span>
       </div>
-      <h3 class="product-title">Маленькое черное платье</h3>
-      <div class="price">&#8381; 1999</div>
+      <h3 class="product-title">Антивирус</h3>
+      <div class="price">Очень странная вселенная едят "мясо" знаменитостей, хотят болеть тем же что и их звезды, мега странные фанаты, и один из продавцов этой хрени, облажался и умрет.
+       </div>
+   </div>
+  </div>
+
+  <div class="border">
+    <div class="wrap">
+      <div class="product-wrap">
+        <a href=""><img src="img/cyber.jpeg"></a>
+      </div>
+      <div class="loop-action">
+        <a href="https://lf22.lordfilm.lu/13679-film-apgrejd-2018.html" class="add-to-cart">Перейти</a>
+
+      </div>
+    </div>
+    <div class="product-info">
+      <div class="rating-mini">
+        <span class="active"></span>  
+        <span class="active"></span>    
+        <span class="active"></span>  
+        <span class="active"></span>    
+        <span class="active"></span>
+        <span></span>  
+        <span></span>    
+        <span></span>  
+        <span></span>    
+        <span></span>
+      </div>
+      <h3 class="product-title">Апгрейд</h3>
+      <div class="price">Ну неожиданная концовка, но из-за этого весь сюжет ломается, а так чел ломает позвоночник, но есть друг который вылечил а тот стал играть в супергероя. </br></br></div>
    </div>
   </div>
 
@@ -79,36 +139,36 @@
     </div>
     <div class="product-info">
       <div class="rating-mini">
-        <span></span>  
+        <span class="active"></span>  
         <span></span>    
-        <span></span>  
+        <span class="active"></span>  
         <span></span>    
-        <span></span>
+        <span class="active"></span>
         <span></span>  
-        <span></span>    
+        <span class="active"></span>    
         <span></span>  
-        <span></span>    
+        <span class="active"></span>    
         <span></span>
       </div>
-      <h3 class="product-title">Маленькое черное платье</h3>
-      <div class="price">&#8381; 1999</div>
+      <h3 class="product-title">Настя ake Ася</h3>
+      <div class="price">Посмотрел бы, но не показывает</br></br></br></br></br></br></div>
    </div>
   </div>
 
   <div class="border">
     <div class="wrap">
       <div class="product-wrap">
-        <a href=""><img src="img/slot.jpg"></a>
+        <a href=""><img src="img/armia.jpeg"></a>
       </div>
       <div class="loop-action">
-        <a href="" class="add-to-cart">Перейти</a>
+        <a href="https://2022-h20.lordfilm0.com/films/34466-armija-vorov-16-06.html" class="add-to-cart">Перейти</a>
 
       </div>
     </div>
     <div class="product-info">
       <div class="rating-mini">
-        <span></span>  
-        <span></span>    
+        <span class="active"></span>  
+        <span class="active"></span>    
         <span></span>  
         <span></span>    
         <span></span>
@@ -118,53 +178,25 @@
         <span></span>    
         <span></span>
       </div>
-      <h3 class="product-title">Маленькое черное платье</h3>
-      <div class="price">&#8381; 1999</div>
+      <h3 class="product-title">Армия воров</h3>
+      <div class="price">Думал крутой фильм про взломщика, а оказался не знаю, ужасный фильм, не знаю зачем продолжил смотреть, а так там чел, который взламывает сейфы лучше всех.</div>
    </div>
   </div>
 
   <div class="border">
     <div class="wrap">
       <div class="product-wrap">
-        <a href=""><img src="img/slot.jpg"></a>
+        <a href=""><img src="img/babadook.jpg"></a>
       </div>
       <div class="loop-action">
-        <a href="" class="add-to-cart">Перейти</a>
+        <a href="https://lf22.lordfilm.lu/9456-film-babaduk-2014.html" class="add-to-cart">Перейти</a>
 
       </div>
     </div>
     <div class="product-info">
       <div class="rating-mini">
-        <span></span>  
-        <span></span>    
-        <span></span>  
-        <span></span>    
-        <span></span>
-        <span></span>  
-        <span></span>    
-        <span></span>  
-        <span></span>    
-        <span></span>
-      </div>
-      <h3 class="product-title">Маленькое черное платье</h3>
-      <div class="price">&#8381; 1999</div>
-   </div>
-  </div>
-
-  <div class="border">
-    <div class="wrap">
-      <div class="product-wrap">
-        <a href=""><img src="img/slot.jpg"></a>
-      </div>
-      <div class="loop-action">
-        <a href="" class="add-to-cart">Перейти</a>
-
-      </div>
-    </div>
-    <div class="product-info">
-      <div class="rating-mini">
-        <span></span>  
-        <span></span>    
+        <span class="active"></span>  
+        <span class="active"></span>    
         <span></span>  
         <span></span>    
         <span></span>
@@ -174,36 +206,8 @@
         <span></span>    
         <span></span>
       </div>
-      <h3 class="product-title">Маленькое черное платье</h3>
-      <div class="price">&#8381; 1999</div>
-   </div>
-  </div>
-
-  <div class="border">
-    <div class="wrap">
-      <div class="product-wrap">
-        <a href=""><img src="img/slot.jpg"></a>
-      </div>
-      <div class="loop-action">
-        <a href="" class="add-to-cart">Перейти</a>
-
-      </div>
-    </div>
-    <div class="product-info">
-      <div class="rating-mini">
-        <span></span>  
-        <span></span>    
-        <span></span>  
-        <span></span>    
-        <span></span>
-        <span></span>  
-        <span></span>    
-        <span></span>  
-        <span></span>    
-        <span></span>
-      </div>
-      <h3 class="product-title">Маленькое черное платье</h3>
-      <div class="price">&#8381; 1999</div>
+      <h3 class="product-title">Бабадук</h3>
+      <div class="price">Ну вот на авише что написано, представьте полностью противополженное, и если хотите посмотреть фильм ужасов, то вам не сюда.</br></br></div>
    </div>
   </div>
 
